--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "",
     "dev:weex": "NODE_ENV=develop node build/build-weex.js",
     "build:weex": "npm run flow && npm run release:weex",
-    "release:weex": "NODE_ENV=production node build/build-weex.js"
+    "release:weex": "NODE_ENV=production node build/build-weex.js",
+    "build":"npm run release:weex && npm run release:web"
   },
   "dependencies": {
     "lodash": "^4.17.4",
