--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "dev:weex": "node build/dev-weex-server.js",
     "build:weex": "npm run flow && npm run release:weex",
     "release:weex": "NODE_ENV=production node build/build-weex.js",
-    "build":"npm run release:weex && npm run release:web"
+    "build": "npm run release:weex && npm run release:web"
   },
   "dependencies": {
     "lodash": "^4.17.4",
     "vue": "^2.1.10",
+    "vue-router": "^2.5.3",
     "weex-dingtalk": "^0.1.1",
     "weex-html5": "^0.4.1",
     "weex-vue-render": "^0.2.0"
