--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:weex": "npm run release:weex",
     "release:weex": "NODE_ENV=production node build/build-weex.js",
     "build": "npm run release:weex && npm run release:web",
-    "dev:watch": "NODE_ENV=watch node build/build-weex.js"
+    "dev:watch": "NODE_ENV=watch node build/build-weex.js",
+    "mock": "nodemon build/mock-server.js"
   },
   "dependencies": {
     "lodash": "^4.17.4",
@@ -57,7 +58,11 @@
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
     "webpack-merge": "^2.6.1",
-    "weex-loader": "^0.4.1"
+    "weex-loader": "^0.4.1",
+    "koa": "~1.1.2",
+    "koa-router": "~5.3.0",
+    "koa-static": "~1.5.2",
+    "nodemon": "^1.11.0"
   },
   "engines": {
     "node": ">= 4.0.0",
