--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,3 @@
 {
-    "presets": [[
-        "es2015", { "modules": false }]],
-    "plugins": ["transform-flow-strip-types"]
+    "presets": ["es2015"]
 }
