--- a/template/package.json
+++ b/template/package.json
@@ -20,8 +20,8 @@
     "vue": "^2.1.10",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1",
-    "dingtalk-javascript-sdk": "^0.1.5",
-    "dingtalk-javascript-utility": "^0.1.5",
+    "dingtalk-javascript-sdk": "^0.2.0",
+    "dingtalk-javascript-utility": "^0.2.5",
     "weex-html5": "^0.4.1",
     "weex-vue-render": "^0.11.50"
   },
@@ -29,7 +29,7 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chalk": "^1.1.3",
@@ -57,7 +57,7 @@
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
     "webpack-merge": "^2.6.1",
-    "weex-loader": "^0.4.4",
+    "weex-loader": "^0.5.3",
     "koa": "~1.1.2",
     "koa-router": "~5.3.0",
     "koa-static": "~1.5.2",
